--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bike Eazy</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
-            background-color: #A0B7AD;
+            background-color: #F0F5F2;
         }
         .navbar {
             background-color: #f6ebdb;
@@ -18,35 +18,56 @@
         .infoBox {
             background-color: #71A499;
             border-radius: 5px;
-            width: fit-content;
-            height: fit-content;
             color: #08483F;
+            padding: 5px 15px;
+            font-size: 0.95rem;
         }
         .buttonBox {
             background-color: #08483F;
-            border-radius: 5px;
-            width: fit-content;
-            height: fit-content;
-            color: #71A499;
-        }
-        .move{
-            margin-left: 100%;
-        }
-        .quick-card {
-            border: none;
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-            text-align: center;
-            padding: 1.5rem;
+            border-radius: 8px;
+            color: #ffffff;
+            padding: 8px 18px;
+            font-weight: 500;
             transition: 0.3s ease;
         }
-        .quick-card:hover {
-            transform: translateY(-5px);
+        .buttonBox:hover {
+            background-color: #ffffff;
+            color: #0a5f52;
         }
-        .quick-card i {
-            font-size: 2rem;
-            margin-bottom: 0.5rem;
-            color: #007bff;
+        .card {
+            background-color: #ffffff;
+            border: none;
+            color: #333;
+            transition: transform 0.3s ease;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        }
+        .card:hover {
+            transform: scale(1.02);
+        }
+        .card-title {
+            color: #08483F;
+            font-weight: bold;
+        }
+        .btn-tech {
+            background-color: #08483F;
+            color: #ffffff;
+            border: none;
+        }
+        .btn-tech:hover {
+            background-color: #0a5f52;
+        }
+        .fit {
+            width: 100%;
+        }
+        .card-section {
+            background-color: #ffffff;
+            border-radius: 16px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+            padding: 2rem;
+        }
+        h3, h4 {
+            color: #08483F;
+            font-weight: 600;
         }
         footer {
             font-size: 0.9rem;
@@ -59,37 +80,48 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container-fluid flex-column align-items-start">
-
-        <!-- Top Row -->
         <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2">
-                <span class="fw-bold">Bike Eazy</span>
+                <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
+                <span class="fw-bold fs-4">Bike Easy</span>
             </a>
             <div class="d-flex flex-wrap align-items-center gap-3">
-                <p class="infoBox mb-0 px-3 py-1">145 Rideau Street, Ottawa, ON</p>
-                <p class="infoBox mb-0 px-3 py-1">(613) 555-9283</p>
+                <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
+                <span class="infoBox">(613) 555-9283</span>
             </div>
         </div>
 
-        <!-- Nav Links -->
         <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navToggle">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse w-100" id="navToggle">
-            <!-- Main navigation -->
             <ul class="navbar-nav d-flex align-items-start gap-3">
-                <li class="nav-item"><a class="nav-link" href="./services">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="./about">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                        <li><a class="dropdown-item" href="#">Build Your Bike</a></li>
+                        <li><a class="dropdown-item" href="#">Maintenance & Repair</a></li>
+                        <li><a class="dropdown-item" href="#">Repair By Yourself</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                        <li><a class="dropdown-item" href="#mission">Mission</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item"><a class="nav-link" href="./contact">Contact Us</a></li>
             </ul>
-
-            <!-- Left-aligned buttons below or inline -->
-            <ul class="d-flex align-items-start gap-2 ms-auto">
+            <div class="ms-auto">
                 <a class="btn buttonBox" href="./location">Hour of Operation</a>
                 <a class="btn buttonBox" href="./book">Book</a>
-            </ul>
+            </div>
         </div>
     </div>
 </nav>
