--- a/location.html
+++ b/location.html
@@ -31,9 +31,33 @@
             transition: 0.3s ease;
         }
         .buttonBox:hover {
-            background-color: #0a5f52;
-            color: #fff;
+            background-color: #ffffff;
+            color: #0a5f52;
         }
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f1f1f1;
+            min-width: 160px;
+            height: fit-content;
+            width: fit-content;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            height: fit-content;
+            width: fit-content;
+            display: block;
+        }
+        .dropdown-content a:hover {background-color: #ddd;}
+        .dropdown:hover .dropdown-content {display: block;}
         .card-section {
             background-color: #ffffff;
             border-radius: 16px;
@@ -59,7 +83,7 @@
         <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
-                <span class="fw-bold fs-4">Bike Eazy</span>
+                <span class="fw-bold fs-4">Hour Of Operation</span>
             </a>
             <div class="d-flex flex-wrap align-items-center gap-3">
                 <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
@@ -74,8 +98,28 @@
         <div class="collapse navbar-collapse w-100" id="navToggle">
             <ul class="navbar-nav d-flex align-items-start gap-3">
                 <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="./services">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="./about">About Us</a></li>
+                <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Services
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                        <li><a class="dropdown-item" href="#">Build Your Bike</a></li>
+                        <li><a class="dropdown-item" href="#">Maintenance & Repair</a></li>
+                        <li><a class="dropdown-item" href="#">Repair By Yourself</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        About Us
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                        <li><p class="dropdown-item">OUR TEAM</p></li>
+                        <li><a class="dropdown-item" href="#">Pierre Georges</a></li>
+                        <li><a class="dropdown-item" href="#">Linda Torres</a></li>
+                        <li><a class="dropdown-item" href="#">Nahar Malik</a></li>
+                        <li><a class="dropdown-item" href="#">Tariq Benson</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item"><a class="nav-link" href="./contact">Contact Us</a></li>
             </ul>
             <div class="ms-auto">
