more to the web-side

--- a/Services/buildYours.html
+++ b/Services/buildYours.html
@@ -97,29 +97,30 @@
 
         <div class="collapse navbar-collapse w-100" id="navToggle">
             <ul class="navbar-nav d-flex align-items-start gap-3">
-                <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="../">Home</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                    <a class="nav-link dropdown-toggle" href="../services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                        <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
-                        <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
+                        <li><a class="dropdown-item" href="../services">Our Goal</a></li>
+                        <li><a class="dropdown-item" href="./mAndR">Maintenance & Repair</a></li>
+                        <li><a class="dropdown-item" href="./repairYourself">Repair By Yourself</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./about" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <a class="nav-link dropdown-toggle" href="../about" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                        <li><a class="dropdown-item" href="./about">Mission</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
+                        <li><a class="dropdown-item" href="../about">Mission</a></li>
+                        <li><a class="dropdown-item" href="../AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
+                        <li><a class="dropdown-item" href="../AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
+                        <li><a class="dropdown-item" href="../AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
+                        <li><a class="dropdown-item" href="../AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="./contact">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="../contact">Contact Us</a></li>
             </ul>
             <div class="ms-auto">
-                <a class="btn buttonBox" href="./location">Hour of Operation</a>
-                <a class="btn buttonBox" href="./book">Book</a>
+                <a class="btn buttonBox" href="../location">Hour of Operation</a>
+                <a class="btn buttonBox" href="../book">Book</a>
             </div>
         </div>
     </div>
