--- a/about.html
+++ b/about.html
@@ -101,6 +101,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="./services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                        <li><a class="dropdown-item" href="./services">Our Goal</a></li>
                         <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
                         <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
                         <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
@@ -109,7 +110,6 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="./about" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                        <li><a class="dropdown-item" href="./about">Mission</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
@@ -167,7 +167,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Nahar Malik</h5>
                     <p class="card-text">Customer Experience Specialist</p>
-                    <a href="site/NaharMalik" class="btn btn-tech w-100">Contact Me</a>
+                    <a href="./AboutUs/NaharMalik" class="btn btn-tech w-100">Contact Me</a>
                 </div>
             </div>
         </div>
@@ -177,7 +177,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Tariq Benson</h5>
                     <p class="card-text">Sustainability & Partnerships Lead</p>
-                    <a href="site/TariqBenson" class="btn btn-tech w-100">Contact Me</a>
+                    <a href="./AboutUs/TariqBenson" class="btn btn-tech w-100">Contact Me</a>
                 </div>
             </div>
         </div>
