--- a/contact.html
+++ b/contact.html
@@ -101,6 +101,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="./services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                        <li><a class="dropdown-item" href="./services">Our Goal</a></li>
                         <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
                         <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
                         <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
@@ -116,7 +117,6 @@
                         <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="./contact">Contact Us</a></li>
             </ul>
             <div class="ms-auto">
                 <a class="btn buttonBox" href="./location">Hour of Operation</a>
