--- a/location.html
+++ b/location.html
@@ -101,6 +101,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="./services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                        <li><a class="dropdown-item" href="./services">Our Goal</a></li>
                         <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
                         <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
                         <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
