--- a/services.html
+++ b/services.html
@@ -125,6 +125,60 @@
         </div>
     </div>
 </nav>
+<!-- Mission -->
+<section id="mission" class="container my-5">
+    <h3 class="text-center mb-4">Our Mission</h3>
+    <p class="lead text-center">
+        At <strong>Bike Eazy</strong> is to make biking effortless, accessible, and empowering for every rider.
+        We aim to provide a reliable space where people can custom-build, repair, and maintain their bikes with confidence, whether they’re commuting daily, riding with family, or just starting out.
+        Through hands-on support, education, and sustainable practices, we help riders stay mobile, independent, and environmentally conscious.
+    </p>
+</section>
 
+<!-- Goal -->
+<section id="team" class="container my-5">
+    <h3 class="text-center mb-4">Our Team</h3>
+    <img src="img/Our%20Team.jpg" class="fit mb-4 rounded shadow-sm" alt="Our Team Photo">
+    <div class="row g-4">
+        <div class="col-md-6 col-lg-3">
+            <div class="card text-center">
+                <img src="img/bicycle-workshop-concept-illustration/7484872.jpg" class="card-img-top rounded-circle mx-auto mt-3" style="width: 120px; height: 120px; object-fit: cover;" alt="buildYours">
+                <div class="card-body">
+                    <h5 class="card-title">Build Your Own Bike</h5>
+                    <p class="card-text"><i>Price:</i> 40$</p>
+                    <a href="./Services/buildYours" class="btn btn-tech w-100">More Information</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <div class="card text-center">
+                <img src="img/bicycle-maintenance-workshop-isometric-background-with-two-workers-installing-bike-parts-after-repai/2105.i105.011.S.m005.c13.isometric%20bicycle%20repair%20illustration.jpg" class="card-img-top rounded-circle mx-auto mt-3" style="width: 120px; height: 120px; object-fit: cover;" alt="mAndR">
+                <div class="card-body">
+                    <h5 class="card-title">Maintenance & Repair</h5>
+                    <p class="card-text"><i>Price:</i> 22$</p>
+                    <a href="./Services/mAndR" class="btn btn-tech w-100">More Information</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <div class="card text-center">
+                <img src="img/bicycle-workshop-concept-illustration%20(1)/7128397.jpg" class="card-img-top rounded-circle mx-auto mt-3" style="width: 120px; height: 120px; object-fit: cover;" alt="repairYourself">
+                <div class="card-body">
+                    <h5 class="card-title">Repair By Yourself</h5>
+                    <p class="card-text"><i>Price:</i> 10$</p>
+                    <a href="./Services/repairYourself" class="btn btn-tech w-100">More Information</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="text-center py-4">
+    <p>Designed by Pierre Georges • © 2025 QuickCycle Repairs</p>
+    <a href="https://pierre252004.github.io/Portfolio/">Pierre's portfolio</a>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
