more to the web-side

--- a/services.html
+++ b/services.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bike Eazy</title>
+    <title>Services<-Bike Eazy</title>
+    <link rel="icon" type="image/png" href="symbol.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
@@ -83,7 +84,7 @@
         <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
-                <span class="fw-bold fs-4">Bike Easy</span>
+                <span class="fw-bold fs-4">Services</span>
             </a>
             <div class="d-flex flex-wrap align-items-center gap-3">
                 <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
@@ -99,7 +100,7 @@
             <ul class="navbar-nav d-flex align-items-start gap-3">
                 <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                    <a class="nav-link dropdown-toggle" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
                         <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
                         <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
@@ -107,7 +108,7 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./about" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <a class="nav-link dropdown-toggle" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
                         <li><a class="dropdown-item" href="./about">Mission</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
@@ -125,9 +126,9 @@
         </div>
     </div>
 </nav>
-<!-- Mission -->
+<!-- Goal -->
 <section id="mission" class="container my-5">
-    <h3 class="text-center mb-4">Our Mission</h3>
+    <h3 class="text-center mb-4">Our Goal</h3>
     <p class="lead text-center">
         At <strong>Bike Eazy</strong> is to make biking effortless, accessible, and empowering for every rider.
         We aim to provide a reliable space where people can custom-build, repair, and maintain their bikes with confidence, whether they’re commuting daily, riding with family, or just starting out.
@@ -135,10 +136,9 @@
     </p>
 </section>
 
-<!-- Goal -->
+<!-- Services -->
 <section id="team" class="container my-5">
-    <h3 class="text-center mb-4">Our Team</h3>
-    <img src="img/Our%20Team.jpg" class="fit mb-4 rounded shadow-sm" alt="Our Team Photo">
+    <h3 class="text-center mb-4">Our Services</h3>
     <div class="row g-4">
         <div class="col-md-6 col-lg-3">
             <div class="card text-center">
