--- a/AboutUs/LindaTorres.html
+++ b/AboutUs/LindaTorres.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bike Eazy</title>
+    <title>L.T.<-About Us<-Bike Eazy</title>
+    <link rel="icon" type="image/png" href="symbol.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
@@ -83,7 +84,7 @@
         <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
-                <span class="fw-bold fs-4">Bike Easy</span>
+                <span class="fw-bold fs-4"><i>Our Team:</i> Linda Torres</span>
             </a>
             <div class="d-flex flex-wrap align-items-center gap-3">
                 <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
