--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bike Eazy</title>
+    <title>About Us<-Bike Eazy</title>
+    <link rel="icon" type="image/png" href="symbol.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
@@ -83,7 +84,7 @@
         <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
-                <span class="fw-bold fs-4">Bike Easy</span>
+                <span class="fw-bold fs-4">About Us</span>
             </a>
             <div class="d-flex flex-wrap align-items-center gap-3">
                 <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
@@ -99,7 +100,7 @@
             <ul class="navbar-nav d-flex align-items-start gap-3">
                 <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./services" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                    <a class="nav-link dropdown-toggle" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
                         <li><a class="dropdown-item" href="./services">Our Goal</a></li>
                         <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
@@ -108,7 +109,7 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./about" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <a class="nav-link dropdown-toggle" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
                         <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
                         <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
