--- a/AboutUs/PierreGeorges.html
+++ b/AboutUs/PierreGeorges.html
@@ -114,6 +114,7 @@
                         <li><a class="dropdown-item" href="../about">Mission</a></li>
                         <li><a class="dropdown-item" href="./NaharMalik">Our Customer Experience Specialist</a></li>
                         <li><a class="dropdown-item" href="./LindaTorres">Our Community & Our Education Manager</a></li>
+                        <li><a class="dropdown-item" href="./TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="../contact">Contact Us</a></li>
