--- a/Services/repairYourself.html
+++ b/Services/repairYourself.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RY<-Services<-Bike Eazy</title>
-    <link rel="icon" type="image/png" href="symbol.png">
+    <link rel="icon" type="image/png" href="../img/symbol.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
@@ -82,8 +82,8 @@
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container-fluid flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
+            <a class="navbar-brand d-flex align-items-center" href="../">
+                <img src="../img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
                 <span class="fw-bold fs-4"><i>Our Service:</i> Repair By Yourself</span>
             </a>
             <div class="d-flex flex-wrap align-items-center gap-3">
