--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container-fluid flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
-            <a class="navbar-brand d-flex align-items-center" href="../">
+            <a class="navbar-brand d-flex align-items-center" href="./">
                 <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
                 <span class="fw-bold fs-4">Bike Easy</span>
             </a>
@@ -134,17 +134,17 @@
     <div id="bikeCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="#">
+                <a href="./Services/buildYours">
                     <img src="img/bicycle-workshop-concept-illustration/bike1.jpg" class="d-block w-100" alt="Bike 1" />
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="#">
+                <a href="./Services/mAndR">
                     <img src="img/bicycle-maintenance-workshop-isometric-background-with-two-workers-installing-bike-parts-after-repai/bike2.jpg" class="d-block w-100" alt="Bike 2" />
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="#">
+                <a href="./Services/repairYourself">
                     <img src="img/bicycle-workshop-concept-illustration (1)/bike3.jpg" class="d-block w-100" alt="Bike 3" />
                 </a>
             </div>
