--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
-                <a class="navbar-brand d-flex align-items-center" href="../">
+                <a class="navbar-brand d-flex align-items-center" href="./">
                     <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
                     <span class="fw-bold fs-4">Contact Us</span>
                 </a>
